apps/base/redirects/s3/endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: s3
  namespace: redirects
subsets:
  - addresses:
      - ip: 10.0.0.100
      - ip: 10.0.0.108
      - ip: 10.0.0.109
    ports:
      - port: 7480
        protocol: TCP
