apps/base/redirects/s3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: s3
  namespace: redirects
spec:
  internalTrafficPolicy: Cluster
  ports:
    - port: 7480
      protocol: TCP
      targetPort: 7480
  sessionAffinity: None
  type: ClusterIP
